# edict

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
agents/taizi/: SOUL.md
dashboard/: court_discuss.py  server.py
dashboard/channels/: __init__.py  base.py  discord.py  feishu.py  slack.py  telegram.py  webhook.py  wecom.py
docs/: local-runtime.md
edict/frontend/src/: App.tsx  api.ts
edict/frontend/src/components/: ModelConfig.tsx  MonitorPanel.tsx  TemplatePanel.tsx
edict_runtime/: __init__.py  codex.py  config.py  engine.py
scripts/: __init__.py  apply_model_changes.py  kanban_update.py  login_openai_codex.py  run_loop.sh  sync_agent_config.py  sync_officials_stats.py
tests/: test_e2e_kanban.py
